Finished view of point convertor page

--- a/src/pages/point-convertor/point-convertor.html
+++ b/src/pages/point-convertor/point-convertor.html
@@ -18,27 +18,28 @@
     <span>Jim's Cafe to Grids Hostel Akihabara</span>
   </div>
 
-  <div class="rate">
+  <div class="rate">Rate</div>
+  <div class="ratio">
     <span>4 : 5</span>
   </div>
 
-  <div class="balance">
+  <div padding class="balance">
     <span>Available balance : </span><span>2000 pts</span>
   </div>
 
   <div class="convert">
     <ion-item>
       <ion-label color="primary" floating>Amount to convert</ion-label>
-      <ion-input type="text"></ion-input>
+      <ion-input type="number"></ion-input>
     </ion-item>
   </div>
 
-  <div class="receivable">
-    <span>Amount Receivable</span>
-    <span>60 pts</span>
+  <div padding class="receivable">
+    <div>Amount Receivable</div>
+    <div class="points">60 pts</div>
   </div>
 
-  <div class="convert">
-    <button ion-button round>Convert</button>
+  <div>
+    <button class="submit" ion-button round>Convert</button>
   </div>
 </ion-content>
