--- a/src/pages/memberships/memberships.html
+++ b/src/pages/memberships/memberships.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Memberships</ion-title>
+    <ion-title>Hi {{ username }} !</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)="addCard()">
         <ion-icon name="add"></ion-icon>
