--- a/src/pages/membership-card/membership-card.html
+++ b/src/pages/membership-card/membership-card.html
@@ -19,9 +19,18 @@
 
 
 <ion-content padding>
-  <div class="qr-code">
+  <!-- <div class="qr-code">
+
+  </div> -->
+  <!-- <svg viewBox="0 0 300 300" preserveAspectRatio="meet">
+      <svg:path [attr.d]="path" />
+  </svg> -->
+  <div [innerHTML]="qrcode">
 
   </div>
+  <!-- <div>
+    {{code}}
+  </div> -->
   <div class="points">
     <span>{{ points }}</span><span> pts</span>
   </div>
