--- a/src/pages/card-signups/card-signups.html
+++ b/src/pages/card-signups/card-signups.html
@@ -14,12 +14,16 @@
 
 
 <ion-content padding class="content">
+  <div class="loader loader-double" [ngClass]="{'is-active': !finishedLoading}"></div>
   <div class="signup-text">
     <h2>Which reward programs would you like to join?</h2>
   </div>
   <ion-list class="signup-list">
-    <button ion-item>BASYXLab</button>
+    <ng-template ngFor let-item [ngForOf]="availableBusinesses" let-j="index">
+      <button ion-item (click)="signup(item)">{{ item.business }}</button>
+    </ng-template>
+    <!-- <button ion-item>BASYXLab</button>
     <button ion-item>NeikidFyre</button>
-    <button ion-item>Ataraxia</button>
+    <button ion-item>Ataraxia</button> -->
   </ion-list>
 </ion-content>
