--- a/src/pages/membership-card-actions/membership-card-actions.html
+++ b/src/pages/membership-card-actions/membership-card-actions.html
@@ -14,12 +14,16 @@
 
 
 <ion-content>
+  <div class="loader loader-double" [ngClass]="{'is-active': !finishedLoading}"></div>
   <ion-list>
     <ion-list-header>
       Convert your points
     </ion-list-header>
-    <button ion-item (click)="openConvertor('dummyText')" class="list-item"><span> to BASYXLab points</span></button>
+    <ng-template ngFor let-action [ngForOf]="actions" let-j="index">
+      <button ion-item class="list-item" (click)="openConvertor(action)">to {{ action.partner }} points</button>
+    </ng-template>
+    <!-- <button ion-item (click)="openConvertor('dummyText')" class="list-item"><span> to BASYXLab points</span></button>
     <button ion-item (click)="openConvertor('dummyText')" class="list-item"><span> to NeikidFyre points</span></button>
-    <button ion-item (click)="openConvertor('dummyText')" class="list-item"><span> to Ataraxia points</span></button>
+    <button ion-item (click)="openConvertor('dummyText')" class="list-item"><span> to Ataraxia points</span></button> -->
   </ion-list>
 </ion-content>
