FX rate appears correctly + small touchups

--- a/src/pages/point-convertor/point-convertor.html
+++ b/src/pages/point-convertor/point-convertor.html
@@ -21,7 +21,7 @@
 
   <div class="rate">Rate</div>
   <div class="ratio">
-    <span>4 : 5</span>
+    <span>{{ rate }}</span>
   </div>
 
   <div padding class="balance">
