--- a/src/pages/memberships/memberships.html
+++ b/src/pages/memberships/memberships.html
@@ -7,6 +7,7 @@
 <ion-header>
 
   <ion-navbar>
+    <button ion-button menuToggle><ion-icon name="menu"></ion-icon></button>
     <ion-title>Hi {{ username }} !</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)="addCard()">
